Modify a small mistake.